--- a/src/app.css
+++ b/src/app.css
@@ -60,6 +60,6 @@
 	}
 
 	body {
-		@apply font-geist-sans bg-background text-foreground;
+		@apply bg-background px-6 py-12 font-geist-sans text-foreground md:px-12 md:py-16 lg:px-14 lg:py-28;
 	}
 }
