--- a/src/app.css
+++ b/src/app.css
@@ -55,15 +55,19 @@
 		font-display: swap;
 	}
 
+	html {
+		scroll-behavior: smooth;
+	}
+
+	body {
+		@apply bg-background px-6 py-12 font-geist-sans text-foreground md:px-12 md:py-16 lg:px-14 lg:py-24 xl:mx-auto xl:w-[85vw];
+	}
+
 	* {
 		@apply border-border;
 
 		::selection {
 			@apply bg-primary text-primary-foreground;
 		}
-	}
-
-	body {
-		@apply bg-background px-6 py-12 font-geist-sans text-foreground md:px-12 md:py-16 lg:px-14 lg:py-24 xl:mx-auto xl:w-[85vw];
 	}
 }
